--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "react-scripts": "4.0.2",
     "react-tilt": "^0.1.4",
     "react-tsparticles": "^1.41.0",
+    "serve": "^13.0.2",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
